added error handling
git-svn-id: https://svn.code.sf.net/p/sdmlib/code-0/trunk@315 2b52b8e8-071c-4d2f-a868-389f512d1cbb